--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header><h1>Серёга Потейчук</h1></header>
-    <a class="perepis" href="perepis.html"><img class="perep_img" src="image/icons8-weixing-240.png"></a>
+    <a class="perepis" href="perepis.php"><img class="perep_img" src="image/icons8-weixing-240.png"></a>
     <main>
         <ul>
             <li class="li"><a href="tank.html">Танки-Танки</a></li>
